# kumi

./: .clang-format  .clang-tidy  .clangd  .codebook.toml  .editorconfig  .gitignore  .rustfmt.toml  CMakeLists.txt  Cargo.toml  DESIGN_GOALS.md  EBNF  EBNF.md  LICENSE  Makefile  README  STRUCTURE.md  codebook.toml  compile_commands.json  conanfile.txt  xmake.lua
.github/: release-drafter.yaml
.github/workflows/: ci.yaml  release.yaml
docs/: CLANGD_SETUP.md  DESIGN_GOALS.md  DEVELOPMENT.md  DOCS.md  KEYWORD_LIST.md  MERMAID.mmd  NOTES.md  PACKAGE_MANAGER.md  PERFORMANCE.md  TOOLING.md
examples/: invalid.kumi  invalid_parser.kumi  invalid_parser2.kumi  library.kumi  simple.kumi
kumi-rs/: Cargo.toml
kumi-rs/src/: char_utils.rs  lexer.rs  main.rs  token.rs
scripts/: cmake_sample.py  cmake_sample_file.py  create_sample_file.py
src/: ast.hpp  error.hpp  lexer.hpp  lib.rs  macros.hpp  main.cpp  main.rs  parser.hpp  token.hpp
src/ast/: ast.hpp
src/cli/: args.rs  build_status.hpp  colors.hpp  components.hpp  generator.hpp  init.rs  input.hpp  progress.hpp  prompt.hpp  prompt_session.hpp  template_loader.hpp  terminal.hpp
src/cli/templates/project/: kumi_build.template
src/cli/templates/source/: library_header.template  library_header_c.template  library_source.template  library_source_c.template  main_c.template  main_cpp23.template  main_cpp_legacy.template
src/cli/tui/: prompt_session.hpp
src/cli/tui/core/: input.hpp  raw_mode.hpp  terminal_size.hpp  terminal_utils.hpp
src/cli/tui/widgets/: build_package.hpp  build_status_tracker.hpp  download_progress.hpp  multi_select.hpp  package_operation.hpp  progress_bar.hpp  select.hpp  spinner.hpp  text_input.hpp
src/diagnostics/: diagnostic.rs  diagnostic_printer.hpp  diagnostic_printer.rs  mod.rs
src/integrations/: NOTE.md
src/lang/: ast.rs  mod.rs
src/lang/ast/: ast.hpp  visitor.hpp
src/lang/lex/: char_utils.hpp  char_utils.rs  lexer.hpp  lexer.rs  mod.rs  token.hpp  token.rs
src/lang/parse/: parser.hpp  parser.rs
src/lang/semantic/: builtins.rs  checker.rs  import_graph.rs  mod.rs  symbol_table.rs
src/lang/support/: arena.hpp  macros.hpp  parse_error.hpp
src/lex/: char_class.hpp  char_utils.hpp  lexer.hpp  token.hpp
src/parse/: parser.hpp
src/pkg/: lockfile.rs  mod.rs  placeholderfile  registry.rs  resolver.rs
src/pkg/ui/: build_package.hpp  build_status_tracker.hpp  download_progress.hpp  package_operation.hpp
src/pkg/ui/primitives/: progress_bar.hpp  spinner.hpp
src/support/: arena.hpp  colors.hpp  diagnostic.hpp  diagnostic_printer.hpp  error.hpp  macros.hpp  parse_error.hpp
src/tools/: mod.rs
src/tools/fmt/: formatter.hpp  formatter.rs
src/tools/lsp/: language_server.hpp  server.rs
src/ui/core/: ansi.hpp  input.hpp  raw_mode.hpp  terminal_size.hpp  terminal_utils.hpp
src/ui/widgets/: multi_select.hpp  select.hpp  text_input.hpp
src/ui/widgets/common/: animation.hpp  symbols.hpp  terminal_state.hpp
tests/: .clang-tidy  checker_test.rs  import_graph_test.rs  lexer_test.cpp  lexer_test.rs  parser_test.cpp  parser_test.rs
tests/lang/: lexer_test.cpp  parser_test.cpp.bak
