[package]
name = "kumi"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.20.2"
clap = { version = "4.5.60", features = ["derive"] }
codespan-reporting = "0.13.1"
dialoguer = "0.12.0"
memchr = "2.8.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[dev-dependencies]
tempfile = "3.27.0"
